Fix .logo alignment in small screens, case #19

--- a/assets/css/sass/blog/_responsive.scss
+++ b/assets/css/sass/blog/_responsive.scss
@@ -30,7 +30,7 @@
 			padding-bottom: 0 !important;
 
 			a {
-				margin-left: 34px !important;
+				margin-left: 38px !important;
 				padding-top: 6px !important;
 				padding-bottom: 6px;
 			}
